Fixed overflow

--- a/src/main/resources/static/resources/css/layoutStyles.css
+++ b/src/main/resources/static/resources/css/layoutStyles.css
@@ -17,7 +17,7 @@ body {
 }
 
 .scrollableBodyDiv {
-	height: 100%;
+	height: 90%;
 	width: 100%;
 	overflow: auto;
 }
